Fixed syntax error in JavaScript template
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -18,7 +18,7 @@ class {{className}} extends React.Component {
 
   static propTypes = {
     {{#each props}}
-    {{propName}}: {{propType}}
+    {{propName}}: {{propType}},
     {{/each}}
   }
 
