Changed code style of JavaScript template to avoid Babel parsing error
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -14,7 +14,7 @@ import {{import}} from "{{from}}"
   * @class
   * @extends {React.Component<Props>}
   */
-class {{className}} extends React.Component {
+export default class {{className}} extends React.Component {
 
   static propTypes = {
     {{#each props}}
@@ -29,5 +29,3 @@ class {{className}} extends React.Component {
   }
 
 }
-
-export default {{className}}
