improve: Added comma to `@typedef` list
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -5,7 +5,7 @@ import {{import}} from "{{from}}"
 /**
   * @typedef \{{
      {{#each props}}
-  *  {{propName}}: {{jsdocType}}
+  *  {{propName}}: {{jsdocType}},
      {{/each}}
   * }} Props
   */
