feat: Changed JSDoc format to something more readbale
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -3,11 +3,10 @@ import {{import}} from "{{from}}"
 {{/each}}
 
 /**
-  * @typedef \{{
+  * @typedef {Object} Props
       {{#each props}}
-  *   {{propName}}: {{jsdocType}},
+  * @prop { {{~jsdocType~}} } {{propName}},
       {{/each}}
-  * }} Props
   */
 
 /**
